# edge-vision-precision-landing

./: .gitignore  AGENT_PACK_COMBINED.md  Dockerfile  ENVIRONMENT_CONTEXT.md  ROADMAP.md  ROADMAP_DATASET_REALISM_PATCH.md  ROADMAP_OPTIMIZATION_EVIDENCE_EXTENSION.md  calculate_day22_metrics.py  docker-compose.yml  requirements.txt  update_manifest.py
configs/faults/: p1a_landing_replay.yaml  p1b_vehicle_tracking.yaml  visdrone_visual_faults.yaml  visual_faults.yaml
configs/motion/: p2a_shaky_generation.yaml
docs/: INTERFACE_CONTRACTS.md  MODEL_CARD.md  TECHNICAL_DESIGN.md
docs/plans/: catchup_day_checklist.md  day_01_checklist.md  day_01_manual_execution_checklist_2_machine.md  day_02_checklist.md  day_03_checklist.md  day_03_execution_plan.md  day_04_checklist.md  day_05_checklist.md  day_06_checklist.md  day_07_checklist.md  day_08_checklist.md  day_09_checklist.md  day_10_checklist.md  day_11_checklist.md  day_12_checklist.md  day_13_checklist.md  day_14_checklist.md  day_15_checklist.md  day_16_checklist.md  day_17_checklist.md  day_18_checklist.md  day_19_checklist.md  day_20_checklist.md  day_21_checklist.md  day_22_checklist.md  day_23_checklist.md  day_24_checklist.md  day_25_checklist.md  day_26_checklist.md  manual_visdrone_import_instructions.md  (+3 more)
edge-ai-training/: EXPERIMENT_REGISTRY.csv
edge-vision-uav-landing/: CMakeLists.txt  pyrightconfig.json  requirements_edge_cpu.txt  test_aruco_wrong_id.py  test_landing_state_machine.py
edge-vision-uav-landing/src/control_cpp/: CMakeLists.txt
edge-vision-uav-landing/src/control_cpp/include/: control_loop.hpp  failsafe.hpp  mavlink_builder.hpp  mavlink_messages.hpp  pid_controller.hpp  state_machine.hpp  udp_receiver.hpp
edge-vision-uav-landing/src/control_cpp/src/: control_loop.cpp  failsafe.cpp  main_control_node.cpp  mavlink_builder.cpp  pid_controller.cpp  state_machine.cpp  test_failsafe.cpp  test_mavlink_bridge.cpp  test_pid.cpp  udp_receiver.cpp
scripts/: aggregate_day22_metrics.py  generate_checksums.sh  run_all_tests.sh  setup.sh  sync_results.py
tests/: run_full_regression.sh
tools/: documentation_audit.py
(+217 files in other folders)
